--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <label for="age-verification">I am over 18 years old</label>
              </li>
             <li id="input-submit">
-                <input type="submit" name="submit" id="submit" value="Subscribe">
+              <input type="submit" name="submit" id="submit" value="Join Now">
             </li>
         </ol>
       </form>
