--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <main id="content">
         <form method="get" action="#null" autocomplete="on">
         <h1>Travel Newsletter</h1>
-        <p>
-        Join the mailing list and win trip to France!
-        </p>
+        <p>Join the mailing list and win trip to France!</p>
         <ol>
            <li id="input-email">
                 <label for="email">Email</label>
