--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main id="content">
-        <form method="get" action="#null" autocomplete="on">
+      <form method="get" action="#null" autocomplete="on" onsubmit="return onSubmit();">
         <h1>Travel Newsletter</h1>
         <p>Join the mailing list and win trip to France!</p>
         <ol>
