--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" media="screen" href="css/reset.css">
     <link rel="stylesheet" media="screen" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/site.js"></script>
+    <script src="js/script.js"></script>
     <title>Document</title>
 </head>
 <body>
